versão 3 - tudo requisitado - falta revisão

--- a/styles.css
+++ b/styles.css
@@ -64,11 +64,11 @@ img {
     transform: rotateY(180deg);
   }
 
-  .card:hover .back-face {
+  .card.rotacionar .back-face {
     transform: rotateY(0deg);
   }
 
-  .card:hover .front-face {
+  .card.rotacionar .front-face {
     transform: rotateY(-180deg);
   }
 
